--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,14 @@ acronym {
 .supplementary_colour_2_light {
   background-color: #96c7e3;
 }
+.colour_swatch {
+  margin: 1px;
+  color: white;
+  font-size: 10px;
+  border-radius: 5px;
+  padding-top: 15px;
+  padding: 5px;
+}
 button,
 .button {
   border: none;
@@ -642,11 +650,12 @@ button.negative_alt:focus,
 }
 select {
   cursor: pointer;
+  border: 1px solid #acacac;
 }
 span.customSelect {
   font: 12px sans-serif;
   background: #fcfcfc right center no-repeat;
-  border: 1px solid #3d3d3d;
+  border: 1px solid #acacac;
   color: #555;
   padding: 7px 9px;
   -moz-border-radius: 5px;
@@ -665,7 +674,7 @@ span.customSelect:after {
 .icheckbox_square-grey,
 .iradio_square-grey {
   background-color: white;
-  border: solid 1px #769d39;
+  border: solid 2px #769d39;
   cursor: pointer;
 }
 .iradio_square-grey {
@@ -691,7 +700,7 @@ span.customSelect:after {
   opacity: 1 !important;
 }
 .input_wrap.negative .iradio_square-grey {
-  border: solid 1px #bf1d40;
+  border: solid 2px #bf1d40;
 }
 .input_wrap.negative .iradio_square-grey.checked ins {
   background-color: #bf1d40 !important;
@@ -888,6 +897,27 @@ span.customSelect:after {
     background-color: #bf1d40;
     -o-transform: scale(1);
   }
+}
+/* SWITCH */
+.onoffswitch-label {
+  border: solid 2px #fcfcfc;
+}
+.onoffswitch-inner:before {
+  background-color: #769d39;
+  border: solid 1px #fcfcfc;
+  border-radius: 20px;
+}
+.onoffswitch-inner:after {
+  background-color: #bf1d40;
+  border: solid 1px #fcfcfc;
+  border-radius: 20px;
+  color: #fcfcfc;
+}
+.onoffswitch-switch {
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  border: solid 2px #fcfcfc;
 }
 @font-face {
   font-family: 'LuxIcon';
@@ -1465,6 +1495,21 @@ h6 {
   width: 75%;
   max-width: 720px;
 }
+.help_button {
+  border: solid 1px white;
+  -webkit-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+  background-color: gray;
+  border-radius: 50%;
+  width: 1.8em;
+  height: 1.8em;
+  float: right;
+  clear: left;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
 .colour-table {
   table-layout: fixed;
 }
@@ -1476,27 +1521,22 @@ h6 {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.colour-table tr td:nth-of-type(1) {
-  width: 12%;
-}
-.colour-table tr td:nth-of-type(2) {
-  width: 5%;
-}
-.colour-table tr td:nth-of-type(3) {
-  width: 32%;
-}
-.colour-table tr td:nth-of-type(4) {
-  width: 25%;
-}
-.colour-table tr td:nth-of-type(5) {
-  width: 7%;
-}
-.colour-table tr td:nth-of-type(6) {
-  width: 4%;
+/*
+.colour-table tr td:nth-of-type(1){ width: 12%; }
+.colour-table tr td:nth-of-type(2){ width: 5%;  }
+.colour-table tr td:nth-of-type(3){ width: 32%; }
+.colour-table tr td:nth-of-type(4){ width: 25%; }
+.colour-table tr td:nth-of-type(5){ width: 7%;  }
+.colour-table tr td:nth-of-type(6){ width: 4%;  }
+*/
+.colour-table tr td {
+  width: 20%;
 }
 .module {
+  position: relative;
   box-sizing: border-box;
-  padding: 5px;
+  padding-top: 15px;
+  padding: 10px;
   width: 100%;
   border: solid 1px gray;
   border-radius: 5px;
@@ -1506,8 +1546,13 @@ h6 {
   -moz-box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75);
   box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.75);
 }
-.module h2 {
+.module > h2 {
   text-align: center;
+  margin-bottom: 15px;
+}
+.module > h3 {
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 .module .example {
   box-sizing: border-box;
