--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,1 +1,107 @@
 /* Main.less */
+@import 'normalize';
+@import 'helpers/button-click-animation';
+@import 'helpers/cheveron-click-animation';
+@import 'fonts';
+@import 'colours';
+@import 'headers';
+@import 'lists';
+@import 'buttons';
+@import 'inputs';
+@import 'select';
+@import 'icons-luxbet';
+@import 'breadcrumb-navigation';
+* {
+	box-sizing:border-box;
+	//font-family: BLap;
+}
+
+[class^="introjs"] {
+	box-sizing: content-box;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family:'HelveticaNeueBdCn';
+}
+h1 { font-size: 2em; }
+h2 { font-size: 1.6em; }
+h3 { font-size: 1.3em; }
+h4 { font-size: 1.1em; }
+h5 { font-size: 1em;  }
+h6 { font-size: .9em; }
+.center {text-align: center;}
+.body_content_wrap {
+	margin-left: auto;
+	margin-right: auto;
+	width: 75%;
+	max-width: 720px;
+}
+
+.help_button {
+	border: solid 1px white;
+	-webkit-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+	background-color: gray;
+	border-radius: 50%;
+	width: 1.8em;
+	height: 1.8em;
+	float: right;
+	clear: left;
+	position:absolute;
+	top: 5px;
+	right: 5px;
+
+}
+
+.colour-table {
+	table-layout: fixed;
+}
+.colour-table .row_header { text-align: left;}
+.colour-table th { overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+/*
+.colour-table tr td:nth-of-type(1){ width: 12%; }
+.colour-table tr td:nth-of-type(2){ width: 5%;  }
+.colour-table tr td:nth-of-type(3){ width: 32%; }
+.colour-table tr td:nth-of-type(4){ width: 25%; }
+.colour-table tr td:nth-of-type(5){ width: 7%;  }
+.colour-table tr td:nth-of-type(6){ width: 4%;  }
+*/
+.colour-table tr td { width: 25%; }
+.black.colour_swatch, .white.colour_swatch { width: 25%; margin-left: auto; margin-right: auto;}
+.white.colour_swatch {color: @black;}
+
+.module {
+	position:relative;
+	box-sizing: border-box;
+	padding-top: 15px;
+	padding: 10px;
+	width: 100%;
+	//border: solid 1px gray;
+	border-radius: 5px;
+	margin: 5px;
+	display: inline-block;
+	-webkit-box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.15);
+	-moz-box-shadow:    1px 1px 5px 0px rgba(50, 50, 50, 0.15);
+	box-shadow:         1px 1px 5px 0px rgba(50, 50, 50, 0.15);
+}
+.module > h2.center { text-align: center; margin-bottom: 10px; }
+//.module > h3 { margin-bottom: 15px; margin-top: 15px;}
+.module .example .title { border-bottom: inset 1px gray; margin-bottom: 15px;  padding-left: 10px;}
+.module .example { 
+	box-sizing: border-box; 
+	border-radius: 5px;
+	padding: 10px;
+	border-radius: 5px;
+	box-sizing: border-box;
+}
+.note:before { content:"Note: "}
+.note {
+	margin: 10px;
+	font-style: italic;
+	font-size: 0.8em;
+}
+
+.clearspace {
+	margin: 10px 0;
+	min-height: 10px;
+}
