Added Time and Initial list styles

--- a/src/styles/icons-luxbet.less
+++ b/src/styles/icons-luxbet.less
@@ -68,6 +68,24 @@
 	width: 20px;
 }
 
+
+
+.icon.x-small {
+	height: 12px;
+	width: 12px;
+	line-height: 12px;
+	margin: .25em;
+	vertical-align: top;
+}
+.icon.x-small:after {
+	font-size: 12px;
+	line-height: 12px;
+	height: 12px;
+	width: 12px;
+	vertical-align: initial;
+}
+
+
 /* These 3 racing icons are repeated again later, in thier proper order */
 .icon-sports-horse-racing:after {
 	content: '\e013';
