--- a/src/styles/inputs.less
+++ b/src/styles/inputs.less
@@ -404,3 +404,17 @@ span.customSelect:after {
 .onoffswitch:active {
 	transform: scale(0.97);
 }
+
+
+
+input[type="text"] {
+	border: solid 1px @primary_colour_dark;
+	border-radius: 3px;
+	padding: 5px;
+}
+input[type="text"]:focus {
+	outline: none;
+	border-color: @supplementary_colour;
+	background-color: @supplementary_colour_light;
+}
+
