--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,7 +1,9 @@
 /* Main.less */
 @import 'normalize';
+@import 'mixins';
 @import 'helpers/button-click-animation';
 @import 'helpers/cheveron-click-animation';
+@import 'helpers/list-item-click-animation';
 @import 'fonts';
 @import 'colours';
 @import 'headers';
@@ -11,6 +13,7 @@
 @import 'select';
 @import 'icons-luxbet';
 @import 'breadcrumb-navigation';
+@import 'time';
 * {
 	box-sizing:border-box;
 	//font-family: BLap;
