--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -46,12 +46,19 @@ div.fancy-select ul.options {
 	border-radius: 4px;
 	border-top: none;//1px solid #7DD8D2;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+	.paperShadow;
 }
 
 div.fancy-select ul.options,
 div.fancy-select ul.options.open {
-	top: 40px;
+	top: 36px;
 	//padding-left: 5px;
+}
+
+div.fancy-select ul.options.overflowing,
+div.fancy-select ul.options.open.overflowing {
+	bottom: 40px;
+	top:auto;
 }
 
 div.fancy-select ul.options li {
