Added Site navigation

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -13,6 +13,7 @@
 @import 'select';
 @import 'icons-luxbet';
 @import 'breadcrumb-navigation';
+@import 'main-nav';
 @import 'time';
 * {
 	box-sizing:border-box;
