More Lists, and cleaned up extra breadcrumb css

--- a/src/styles/breadcrumb-navigation.less
+++ b/src/styles/breadcrumb-navigation.less
@@ -5,7 +5,9 @@
 }
 
 .horizontal_scroll_wrap {
-    width: 380px;
+    width: 85%;
+    max-width: 380px;
+    min-width: 220px;
     margin-left: auto;
     margin-right: auto;
     //border: solid 1px grey;
@@ -36,6 +38,7 @@
     text-decoration: none;
 }
 
+/*
 
 .icon-crest-2 {
     width: 35px;//100%;
@@ -156,4 +159,4 @@
     }
 }
 
-
+*/
