--- a/src/styles/lists.less
+++ b/src/styles/lists.less
@@ -4,19 +4,50 @@
 	@local_complimentary: @complimentary_colour;
 	@local_complimentary_dark: @complimentary_colour_dark;
 	@local_supplementary: @supplementary_colour_dark;
+
+
+	&.with-arrows {
+		li .titleWrap {
+			padding-right: 40px;
+		}
+	}
+
+
+	&.with-icons {
+		li .titleWrap {
+			padding-top: 0px;
+			padding-left: 45px;
+			padding-right: 40px;
+		}
+	}
+
+	&.detailed {
+		li {
+			min-height: 47px;
+		}
+		li a {
+			min-height: 47px;
+		}
+
+		li .titleWrap {
+			padding-top: 0px;
+			padding-left: 45px;
+			padding-right: 40px;
+		}
+
+	}
 	li {
-		min-height: 47px;
+		min-height: 32px;//47px;
 		background-color: @local_white;
 		color: @black;
 		border-bottom: solid 1px @local_dark;
-		//line-height: 47px;
 		position: relative;
 	}
 	li a {
 		display: block;
 		width: 100%;
 		height: 100%;
-		min-height: 47px;
+		min-height: 32px;//47px;
 		position: relative;
 		cursor: pointer;
 	}
@@ -65,9 +96,10 @@
 		text-align: center;
 	}
 	li .titleWrap {
-		padding-left: 40px;
-		padding-right: 40px;
+		padding-left: 15px;//45px;
+		padding-right: 10px;
 		display: block;
+		padding-top: 5px;
 
 		.title {
 			display: inline-block;
@@ -89,7 +121,7 @@
 	}
 
 	li .products {
-		margin-left: 40px;
+		margin-left: 45px;
 		margin-bottom: 5px;
 	}
 	li .products .product {
