--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -59,6 +59,7 @@ h6 { font-size: .9em; }
 
 .colour-table {
 	table-layout: fixed;
+	min-width: 700px;
 }
 .colour-table .row_header { text-align: left;}
 .colour-table th { overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
