--- a/src/styles/main-nav.less
+++ b/src/styles/main-nav.less
@@ -68,5 +68,5 @@
 		.list-item-click-animation(main_nav_color_change_default);
 		.paperShadow-inset;
 	}
-	.keyframes(main_nav_color_change_default, @local_primary_colour_light, @local_feature_colour, @local_feature_colour_light);//@local_feature_colour_dark);
+	.button-click-keyframes(main_nav_color_change_default, @local_primary_colour_light, @local_feature_colour, @local_feature_colour_light);//@local_feature_colour_dark);
 }
