--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -4,6 +4,7 @@
 @import 'helpers/button-click-animation';
 @import 'helpers/cheveron-click-animation';
 @import 'helpers/list-item-click-animation';
+@import 'columns';
 @import 'fonts';
 @import 'colours';
 @import 'headers';
@@ -15,6 +16,9 @@
 @import 'breadcrumb-navigation';
 @import 'main-nav';
 @import 'time';
+@import 'bet';
+@import 'betslip';
+
 * {
 	box-sizing:border-box;
 	//font-family: BLap;
