--- a/src/styles/bet.less
+++ b/src/styles/bet.less
@@ -39,6 +39,18 @@
 	.selectionEvent {
 		clear: both;
 	}
+
+	.selectionDateTime {
+		width: 100%;
+		font-size: 1em;
+		clear:both;
+	}
+
+	.selectionInfo {
+		width: 100%;
+		clear:both;
+	}
+
 	.ticketColumns {
 		clear: left;
 		width: 100%;
@@ -51,6 +63,7 @@
 	}
 	.stakeLabel {
 		text-align: center;
+		line-height: 30px;
 		width: 100%;
 	}
 	.stake input {
@@ -62,13 +75,13 @@
 			font-size: .8em;
 			text-decoration: underline;
 			cursor: pointer;
-			//line-height: 30px;
-			margin-top: 25px;
+			line-height: 30px;
+			margin-top: 30px;
 			display: block;
 		}
 	}
 	.selectionPriceLabel {
-		height: 20px;
+		height: 30px;
 	}
 	.selectionPrice {
 		clear: left;
