--- a/src/styles/betslip.less
+++ b/src/styles/betslip.less
@@ -19,5 +19,22 @@
 		}
 	}
 
+	.buttonDelete {
+		font-size: .8em;
+		text-decoration: underline;
+		cursor: pointer;
+		line-height: 30px;
+		margin-top: 30px;
+		display: block;
+		text-align: center;
+	}
+	.betslipFooter {
+		.buttonDelete {
+			margin-top: 0px;
+		}
+		.col_50 {
+			text-align: center;
+		}
+	}
 
 }
